--- a/resume/css/index.css
+++ b/resume/css/index.css
@@ -127,7 +127,7 @@ body {
   width: 160px;
   height: 160px;
   margin: 40px auto 20px;
-  background: url(../img/head1.jpg) no-repeat center;
+  background: url(../img/head1.JPG) no-repeat center;
   background-size: 180px 180px;
   background-clip: padding-box;
   border: 10px solid rgba(255, 255, 255, 0.6);
